--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -224,3 +224,11 @@
   year		= {2010},
   pages		= {177-184}
 }
+
+@Book{		  gnt04,
+  author	= {M. Ghallab and D. Nau and P. Traverso},
+  title		= {Automated planning: {T}heory and practice},
+  publisher	= {Morgan Kaufmann},
+  address	= {San Francisco, CA, USA},
+  year		= {2004}
+}
