--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -144,11 +144,11 @@ For the proof of concept we implemented a multi-threaded version of \DAEYAHSP, t
 The design of experiment is built on problems extracted from the last international planning competition\footnote{\url{http://ipc.icaps-conference.org}} with the multithreaded \DAEYAHSP\ release mapped onto a 48-core parallel machine.
 
 % FIXME : plan de l'article
-is outilined as follows. We first  describe some previous works in the fields of
-parallel evolutionary  computation and AI planning, before  presenting with more
-details  the  main  algorithms  on  which  our parallel  system  is  based:  the
+The paper is  outlined as follows. We first describe some  previous works in the
+fields of  parallel evolutionary computation and AI  planning, before presenting
+with more details the main algorithms on which our parallel system is based: the
 evolutionary  metaheuristic  \DAEX\ and  the  forward-chaining heuristic  search
-planner YAHSP.  The parallel implementation of \DAEYAHSP\ is then described, as
+planner YAHSP.  The parallel implementation  of \DAEYAHSP\ is then described, as
 well as the specific problems,  due to the shared-memory programming model, that
 arose during  this implementation.  After having  demonstrated the effectiveness
 of our parallel implementation of \DAEYAHSP\ on two planning benchmark tasks, we
