Category, terms, keywords

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -109,8 +109,14 @@ The parallelization scheme applies at a high level abstraction and thus can be u
 The proof of concept is made on a 48-core machine with two planning tasks extracted from the last international planning competition.
 Experiments show significant speedups along the number of cores and along the size of the population.
 This preliminary work opens an avenue for parallelizing any evolutionary algorithm developed with EO.
-
 \end{abstract}
+
+\category{I.2.8}{Computing Methodologies}{Artificial Intelligence }{Problem Solving, Control Methods, and Search}
+
+%General Terms: This section is limited to the following 16 terms. Select one of the following general terms that best describes the content of your submission: Algorithms, Management, Measurement, Documentation, Performance, Design, Economics, Reliability, Experimentation, Security, Human Factors, Standardization, Languages, Theory, Legal Aspects, Verification
+\terms{Algorithms}
+
+\keywords{Parallel Evolutionary Algorithm, Automated Planning, Parallel Shared-Memory, Implementation} % NOT required for Proceedings
 
 \section{Introduction}
 % argument : Q=Comment paralléliser un algo de recherche de plans ? 
