--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -1,3 +1,18 @@
+
+Volume 31, Issues 10-12 (2005), 215 pp 
+OpenMP  
+% Parallel Computing
+
+@ARTICLE{special:parallelComputing2005,
+	AUTHOR = "",
+	TITLE = "{Special Issue on OpenMP}",
+	JOURNAL = "Parallel Computing",
+	VOLUME = {31},
+	NUMBER = {10-12},
+	PAGES = {957-1173},
+	PUBLISHER = {Elsevier},
+	YEAR = {2005}	}
+	
 % Parallel Evolutionary Algorithms
 
 @ARTICLE{paradiseo:JHeuristics2004,
@@ -227,7 +242,7 @@
 
 @Book{		  gnt04,
   author	= {M. Ghallab and D. Nau and P. Traverso},
-  title		= {Automated planning: {T}heory and practice},
+  title		= {{Automated Planning: Theory and Practice}},
   publisher	= {Morgan Kaufmann},
   address	= {San Francisco, CA, USA},
   year		= {2004}
