--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -101,6 +101,7 @@
 
 \maketitle
 \begin{abstract}
+
 Multicore machines are becoming a standard way to speed up the system performance.
 After having instantiated the evolutionary metaheuristic \DAEX\ with the forward search \YAHSP\ planner, 
 we investigate on the global parallelism approach, which exploits the inherent parallelism of the individual evaluation.
@@ -123,6 +124,7 @@ This preliminary work opens an avenue for parallelizing any evolutionary algorit
 %            R=concevoir d'abord un algorithme évolutionnaire puis paralléliser sa fonction d'évaluation
 
 % The Planning Problem
+
 The  classical planning problem  in Artificial  Intelligence \cite{gnt04}  is to
 find a path in a transition system:  a sequence of actions which maps an initial
 state $I$ into a  state $G$ satisfying a set of desired  goals. Usually a metric
@@ -142,12 +144,31 @@ Recently the \DAEX\ evolutionary metaheuristic has been proposed to solve such p
 As an evolutionary algorithm \DAEX\ provides an inherent parallelism: the individual evaluation stage, which is often the most time-consuming stage during the evolutionary generation loop.
 This nice property opens an avenue towards the design of a parallel planning system without going deeply inside a whole reconstruction of the sequential version.
 
-Moreover, the implementation of \DAEX\ has been made with the STL-based Evolving Objects framework\footnote{\url{http://eodev.sf.net}} which provides an abstract control structure to develop any kind of evolutionary algorithm. Therefore our parallelization scheme is easily transposable to any evolutionary algorithm developed with the EO framework.
-
+Moreover, the implementation of \DAEX\ has been made with the STL-based Evolving
+Objects framework\footnote{\url{http://eodev.sf.net}} which provides an abstract
+control structure to develop any kind of evolutionary algorithm. Therefore our
+parallelization scheme is easily transposable to any evolutionary algorithm
+developed with the EO framework.
 
 % Il manque un argument pour dire que les archis parallel shared-memory sont bien adaptées à notre cas au contraire des GPGPU (on a pas choisi une archi multi-core au hasard !)
 For the proof of concept we implemented a multi-threaded version of \DAEYAHSP, the instantiation of \DAEX\ with the heuristic forward search \YAHSP\ planner \cite{yahsp:icaps2004}, using the OpenMP directive-based API\footnote{\url{http://www.openmp.org}}. 
 The design of experiment is built on problems extracted from the last international planning competition\footnote{\url{http://ipc.icaps-conference.org}} with the multithreaded \DAEYAHSP\ release mapped onto a 48-core parallel machine.
+
+While clusters is the most common distributed memory system for high performance
+computing, multi-core architecture are gaining popularity as they become the
+{\it de facto} standard in computer mass market. The GPGPU-based architectures
+share similar characteristics, but are not well suited for executing programs
+that would not be designed for it.
+
+For the proof of concept we implemented a multi-threaded version of \DAEYAHSP,
+the instantiation of \DAEX\ with the heurictic forward search \YAHSP\ planner
+\cite{yahsp:icaps2004}, using the OpenMP directive-based
+API\footnote{\url{http://www.openmp.org}}.  
+
+The design of experiment is built on
+problems extracted from the last international planning
+competition\footnote{\url{http://ipc.icaps-conference.org}} with the
+multithreaded \DAEX\ release mapped onto a 48-core parallel machine.
 
 % FIXME : plan de l'article
 The paper is  outlined as follows. We first describe some  previous works in the
@@ -173,15 +194,11 @@ where the evaluation is decentralized  but not the other operators, cellular EAs
 approach using a multi-population {\it island parallelism}.
 
 The runs parallelism being trivially achieved by running several runs, the first
-step when parallelizing a new algorithm is often the global parallelization
-approach, which is preferred because the evaluation step is often the most costly
-part of EAs and because it is intrinsically race-conditions free.
-
-FIXME CITE ALBA
+step when parallelizing a new algorithm is often to try the global
+parallelization approach, because the evaluation step is often the most costly
+part of EAs and because evaluation are generally intrinsequely independant.
 
 
-
-FIXME
 
 \paragraph{Parallel Planning} % (VV)
 \label{section:previous-work}
@@ -408,10 +425,12 @@ architecture, where message passing is somewhat useless and may introduce an
 overhead higher than other approaches. For a multicore architecture, shared
 memory parallelization approach is a better candidate as it does not necessitate
 heavy libraries linked to the core program. In this work, we have used
-OpenMP\footnote{OpenMP: \url{http://www.openmp.org}}, that uses a set of compiler
-directives to tell the compiler which part of a program should be parallelized.
-The main advantage of OpenMP is that it is designed to make easy to parallelize
-an existing program \cite{special:parallelComputing2005}.
+OpenMP\footnote{OpenMP: \url{http://www.openmp.org}}, that uses a set of
+compiler directives to tell the compiler which part of a program should be
+parallelized.  The main advantage of OpenMP is that it is designed to make easy
+to parallelize an existing program\cite{special:parallelComputing2005}. It may
+also be used as a simple approach to program clusters, either with specialized
+methods or virtual SMP machines\cite{Huang:openmpGlobalArrays2005}.
 
 % parler de la genericite de la technique de parallelisation, n'importe qui peut utiliser EO pour avoir du code parallel independament de DaE/Yahsp.
 
@@ -458,7 +477,9 @@ void apply< EOT >( eoUF< EOT, void >& proc,
   % \ENDWHILE
 % \end{algorithmic}
 
-The parallelization of this region of code is done thanks to the pragma ``omp for''. This can be translated in the PRAM model by the use of CREW\footnote{CREW: Concurrent Read Exclusive Write} model.
+The parallelization of this region of code is done thanks to the pragma ``omp
+for''. This can be translated in the PRAM model by the use of
+CREW\footnote{CREW: Concurantial Read Exclusive Write} model.
 
 %%According to the PRAM\footnote{wikipedia PRAM} models we are using a CREW\footnote{[A[Concurrent Read Exclusive Write} model.
 
@@ -753,7 +774,9 @@ inherently parallel, as it use independent variation operators.
 
 % Impact on the EA design
 % Do you agree below?
-A further research axis deals with the impact on solution quality and in particular how to take advantage of the parallelization scheme to escape from premature convergence.
+A further research axis deals with the impact on solution quality and in
+particular how to take advantage of the parallelization scheme to escape from
+premature convergence.
 
 
 
