--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -170,7 +170,7 @@ problems extracted from the last international planning
 competition\footnote{\url{http://ipc.icaps-conference.org}} with the
 multithreaded \DAEX\ release mapped onto a 48-core parallel machine.
 
-% FIXME : plan de l'article
+% plan de l'article
 The paper is  outlined as follows. We first describe some  previous works in the
 fields of  parallel evolutionary computation and AI  planning, before presenting
 with more details the main algorithms on which our parallel system is based: the
@@ -196,7 +196,7 @@ approach using a multi-population {\it island parallelism}.
 The runs parallelism being trivially achieved by running several runs, the first
 step when parallelizing a new algorithm is often to try the global
 parallelization approach, because the evaluation step is often the most costly
-part of EAs and because evaluation are generally intrinsequely independant.
+part of EAs and because evaluation are generally intrinsequely independant \cite{alba:IEEE2002}.
 
 
 
