description of the last figure

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -729,7 +729,9 @@ population size is small.
   \label{fig:speedup_pop}
 \end{figure}
 
-Figure \ref{fig:speedup_pop}
+Figure \ref{fig:speedup_pop} shows that the expected speed-up of $40$ is met,
+and that it decrease with the population size.
+
 %shows that the median computation time on a
 % multicore machine increase linearly with the size of the population. The 
 % dispersions of the distribution is due to the steady-state stopping criterion 
